# ARC-Alkali-Rydberg-Calculator

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  ARC - Polarisability Calculations.ipynb  ARC Additions-BreitRabi.ipynb  ARC Additions.ipynb  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  appveyor.yml  calculations_atoms_single_old.rst  cesium_rydberg_oscillator_strengths_modified_arc.ipynb  dev.ipynb  dev.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  codeql.yml  linux.yaml  mac.yaml  pypi_linux.yaml  pypi_macos.yaml  pypi_windows.yaml  wheels.yaml  windows.yaml
arc/: __init__.py  _database.py  alkali_atom_data.py  alkali_atom_functions.py  alkaline_earth_atom_data.py  alkaline_earth_atom_functions.py  arc_c_extensions.c  arc_c_extensions.py  beta.py  calculations_atom_pairstate.py  calculations_atom_single.py  custom-module-template.rst  divalent_atom_data.py  divalent_atom_functions.py  format_number.py  materials.py  mpl_style.py  nvwcpp.c  nvwcpp.cpp  nvwcpp_linux  nvwcpp_mac  setupc.py  web_functionality.py  wigner.py
arc/advanced/: README.md  __init__.py  population_lifetime.py
arc/data/: NIST_cs_dipole_matrix_elements.npy  NIST_k_dipole_matrix_elements.npy  NIST_li6_dipole_matrix_elements.npy  NIST_li7_dipole_matrix_elements.npy  NIST_na23_dipole_matrix_elements.npy  NIST_rb_dipole_matrix_elements.npy  NIST_rb_quadrupole_matrix_elements.npy  angularMatrix.npy  angularMatrix.pkl  angularMatrix_meta.npy  angularMatrix_meta.pkl  ca_dipole_matrix_elements.npy  ca_level_data.csv  caesium_literature_dme.csv  calcium_literature_dme.csv  cs_NIST_level_data.ascii  cs_dipole_matrix_elements.npy  cs_hfs_data.csv  cs_precalculated.db  cs_quadrupole_matrix_elements.npy  h_NIST_level_data.ascii  h_precalculated.db  h_quadrupole_matrix_elements.npy  k39_hfs_data.csv  k40_hfs_data.csv  k41_hfs_data.csv  k_NIST_level_data.ascii  k_dipole_matrix_elements.npy  k_precalculated.db  k_quadrupole_matrix_elements.npy  li6_dipole_matrix_elements.npy  li6_hfs_data.csv  li6_precalculated.db  li6_quadrupole_matrix_elements.npy  li7_dipole_matrix_elements.npy  li7_hfs_data.csv  li7_precalculated.db  li7_quadrupole_matrix_elements.npy  li_NIST_level_data.ascii  na23_dipole_matrix_elements.npy  (+19 more)
arc/data/refractive_index_data/: Mathar-1.3.csv  Mathar-2.8.csv  Mathar-4.35.csv  Mathar-7.5.csv  Querry-e.csv  Querry-o.csv
arc/temp/: readme.txt
data/: precalculated6j.npy
doc/: AC_Stark_primer.ipynb  ARC Additions.ipynb  ARC_3_0_introduction.ipynb  ARC_3_1_Additions.ipynb  ARC_3_1_additions.ipynb  ARC_angularChannels.ipynb  Makefile  Rydberg_atoms_a_primer.html  Rydberg_atoms_a_primer_notebook.ipynb  advanced.rst  alkali_atom_data.rst  alkali_atom_functions.rst  alkaline_earth_atom_data.rst  alkaline_earth_atom_functions.rst  angular_algebra.rst  calculations_atom_pairstate.PairStateInteractions.rst  calculations_atom_pairstate.StarkMapResonances.rst  calculations_atom_pairstate.rst  calculations_atom_single.ACStarkMap.rst  calculations_atom_single.AtomSurfaceVdW.rst  calculations_atom_single.DynamicPolarizability.rst  calculations_atom_single.LevelPlot.rst  calculations_atom_single.OpticalLattice1D.rst  calculations_atom_single.StarkMap.rst  calculations_atom_single.Wavefunction.rst  calculations_atom_single.materials.rst  calculations_atom_single.rst  calculations_atoms_single.rst  conf.py  contribute.rst  detailed_doc.rst  divalent_atom_data.rst  divalent_atom_functions.rst  getting_started.rst  index.rst  installation.rst  math_and_io_primitives.rst  numerics_and_io.rst  requirements.txt
doc/_static/: ARC_3_0_introduction.html  ARC_3_1_Additions.html  Rydberg_atoms_a_primer.html
doc_source/: Rydberg_atoms_a_primer_notebook.ipynb  alkali_atom_functions.rst  conf.py  getting_started.rst
documentation/: Rydberg_atoms_a_primer.html  alkali_atom_data.html  alkali_atom_functions.html  calculations_atom_pairstate.html  calculations_atoms_single.html  contribute.html  detailed_doc.html  examples.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
documentation/_downloads/: Rydberg_atoms_a_primer_notebook.ipynb
documentation/_modules/: alkali_atom_data.html  alkali_atom_functions.html  calculations_atom_pairstate.html  calculations_atom_single.html  google_test.html  index.html  wavefunction_ver5_3.html
documentation/_sources/: examples.txt
test/: test_import.py  test_lifetime.py  test_pairstate.py  test_single_atom.py
